# supider

./: .gitignore  README.rst  requirements.txt  setup.cfg  setup.py
supider/: __init__.py  connector.py  supider.py  utils.py
