[metadata]
name = pyingx
summary = supider library
author = Yingxin
classifier =
    Environment :: Yingxin
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    supider

[pbr]
warnerrors = true

[entry_points]

[wheel]
universal = 1
